<resources>
    <string name="app_name">Cartão de Visitas</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="novo_cartao">Novo cartão</string>
    <string name="nome">Nome</string>
    <string name="empresa">Empresa</string>
    <string name="telefone_contato">Telefone de Contato</string>
    <string name="email">Email</string>
    <string name="cor_fundo">Cor de Fundo</string>
    <string name="confirmar">Confirmar</string>
    <string name="telefone">Telefone</string>
    <string name="nome_empresa">Nome da Empresa</string>
    <string name="adicionar">Adicionar</string>
    <string name="cartao_salvo">Cartão salvo</string>
    <string name="foto_pessoal">foto pessoal</string>
    <string name="editar_cartao">Editar cartão</string>
    <string name="excluir">Excluir</string>
    <string name="foto_da_pessoa">Foto da pessoa</string>
</resources>