<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.AddFragment"
        android:layout_above="@+id/confirmarButton">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/nomeInputLayout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/photo_button">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/nomeEdit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/nome" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/empresaInputLayout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/nomeInputLayout">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/empresaEdit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/empresa" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/telefoneInputLayout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/empresaInputLayout">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/telefoneEdit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/telefone_contato" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/emailInputLayout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/telefoneInputLayout">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/emailEdit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/email" />
        </com.google.android.material.textfield.TextInputLayout>

        <ImageButton
            android:id="@+id/photo_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:background="@drawable/circular_shape"
            android:cropToPadding="false"
            android:minWidth="125dp"
            android:minHeight="125dp"
            android:scaleType="centerCrop"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_baseline_person_24"
            android:focusable="true"
            android:clickable="true"
            android:contentDescription="@string/foto_pessoal" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <Button
        android:id="@+id/confirmarButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/confirmar"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="32dp"
        android:layout_marginStart="64dp"
        android:layout_marginEnd="64dp"
        android:paddingTop="24dp"
        android:paddingBottom="24dp"
        style="@style/TextAppearance.AppCompat.Widget.Button.Inverse"/>

</RelativeLayout>